--- a/style.scss
+++ b/style.scss
@@ -1,17 +1,103 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Muli:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 * {
   box-sizing: border-box;
 }
 
 body {
-  font-family: "Roboto", sans-serif;
-  height: 100vh;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  font-family: 'Muli', sans-serif;
+  background-color: #f0f0f0;
+}
+
+h1 {
+  margin: 50px 0 30px;
+  text-align: center;
+}
+
+.faq-container {
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+.faq {
+  background-color: transparent;
+  border: 1px solid #9fa4a8;
+  border-radius: 10px;
+  margin: 20px 0;
+  padding: 30px;
+  position: relative;
   overflow: hidden;
+  transition: 0.3s ease;
+
+  &__title {
+    margin: 0 35px 0 0;
+  }
+
+  &__text {
+    display: none;
+    margin: 30px 0 0;
+  }
+
+  &__toggle {
+    background-color: transparent;
+    border: 0;
+    border-radius: 50%;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 16px;
+    padding: 0;
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    height: 30px;
+    width: 30px;
+    outline: none;
+
+    .fa-times {
+      display: none;
+    }
+  }
+}
+
+.faq.active .faq__toggle .fa-times {
+  display: block;
+}
+
+.faq.active .faq__toggle .fa-chevron-down {
+  display: none;
+}
+
+.faq.active .faq__toggle {
+  background-color: #9fa4a8;
+  color: #fff;
+}
+
+.faq.active {
+  background-color: #fff;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1), 0px 3px 6px rgba(0, 0, 0, 0.1);
+
+  &::before,
+  &::after {
+    font-family: "Font Awesome 5 Free";
+    content: '\f26c';
+    color: #2ecc71;
+    font-size: 7rem;
+    position: absolute;
+    opacity: 0.2;
+    top: 20px;
+    left: 20px;
+    z-index: 0;
+  }
+
+  &::before {
+    color: #3498db;
+    top: -10px;
+    left: -30px;
+  }
+}
+
+.faq.active .faq__text {
+  display: block;
 }
